[Backport, Java 9] Fix OperatingSystemMetricSet and improve tests to read probe values during testing.