@@ -982,7 +982,7 @@
         <profile>
             <id>jdk-9</id>
             <activation>
-                <jdk>1.9</jdk>
+                <jdk>[9,)</jdk>
             </activation>
             <build>
                 <plugins>
@@ -994,8 +994,14 @@
                             <redirectTestOutputToFile>true</redirectTestOutputToFile>
                             <useFile>false</useFile>
                             <trimStackTrace>false</trimStackTrace>
+                            <!--
+                            The jdk.xml.internal package export is added to workaround Powermock issue https://github.com/powermock/powermock/issues/905 in tests.
+                            The package opening from jdk.management module is added to allow reflection access to OS level metrics in OperatingSystemMetricSet class.
+                             -->
                             <argLine>
                                 ${vmHeapSettings}
+                                --add-exports java.xml/jdk.xml.internal=ALL-UNNAMED
+                                --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED
                                 -Dhazelcast.phone.home.enabled=false
                                 -Dhazelcast.mancenter.enabled=false
                                 -Dhazelcast.test.use.network=false
@@ -1009,6 +1015,11 @@
                                 <exclude>**/jsr/**.java</exclude>
                                 <exclude>**/**IT.java</exclude>
                                 <exclude>**/mapreduce/**.java</exclude>
+                                <!--
+                                  An outdated PaxRunner used by the OSGi test prevents executing on Java 9+.
+                                  TODO: remove this exclude once we have a proper fix in the test class.
+                                -->
+                                <exclude>**/HazelcastOSGiIntegrationTest.java</exclude>
                             </excludes>
                             <groups>com.hazelcast.test.annotation.QuickTest</groups>
                             <excludedGroups>
